index.css
/* ... */
/* If mobile screens */
@media (max-width: 768px) {

    .technology-grouping {
        display: flex;
        flex-direction: column;
        gap: 10px;
    }

    .column {
        padding-top: 0px;
        padding-bottom: 10px;
    }

    .link-wrapper {
        padding: 2px;
    }

    .content {
        margin-top: 54px;
    }

    .uni-stats {
        flex-direction: column;
        height: auto;
        padding-bottom: 400px;
        align-items: center;
    }

    /* Adjust the child divs to take full width and stack vertically */
    .uni-stats>div {
        flex-basis: auto;
        width: 100%;
        margin-bottom: 20px;
    }


    .top-blurb {
        flex-direction: column;
        gap: 20px;
        align-items: center;
    }

    .content {
        flex-direction: column;
    }

    .left-column {
        display: none;
    }

    .right-column {
        width: 100%;
        overflow-y: visible;
        max-height: none;
    }

    .monkey-photo {
        display: none;
    }

    .custom-date {
        font-size: 10px;
    }

    .time-column {
        padding-right: 10px;
    }


    .card svg {
        scale: 0;
    }

    .card .card__content {
        transform: rotateX(0deg);
    }

    .card {
        transform: scale(1.05);
        box-shadow: 0 8px 16px rgba(255, 255, 255, 0.2);
    }

    /* Hide the time-column */
    .time-column {
        display: none;
    }

    /* Show custom-date at the top of each experience item */
    .experience-column .experience-column-1 {
        position: relative;
    }

    .experience-column .experience-column-1::before {
        content: attr(data-date-range);
        display: block;
        font-size: 14px;
        font-style: italic;
        color: #fff;
        text-align: center;
        margin-bottom: 10px;
    }
}

